--- a/app/src/main/res/layout/item_announcement.xml
+++ b/app/src/main/res/layout/item_announcement.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:text="Announcement"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tvTime"
             app:layout_constraintHorizontal_bias="0.5"
