--- a/app/src/main/res/layout/item_chat_message_incoming.xml
+++ b/app/src/main/res/layout/item_chat_message_incoming.xml
@@ -16,7 +16,7 @@
             android:padding="8dp">
 
         <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvUsername"
+                android:id="@+id/tv_playername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_playername" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
