--- a/app/src/main/res/layout/item_chat_message_outgoing.xml
+++ b/app/src/main/res/layout/item_chat_message_outgoing.xml
@@ -28,7 +28,7 @@
             android:paddingVertical="8dp">
 
         <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvUsername"
+                android:id="@+id/tv_playername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
@@ -48,7 +48,7 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_playername" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
