--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvUsername"
+        android:id="@+id/tv_playername"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center_vertical"
