Use launchSingleTop for nav to avoid closing the app

--- a/app/src/main/res/navigation/setup_nav_graph.xml
+++ b/app/src/main/res/navigation/setup_nav_graph.xml
@@ -22,7 +22,8 @@
                 app:popUpTo="@id/selectRoomFragment" />
         <action
                 android:id="@+id/action_selectRoomFragment_to_drawingActivity"
-                app:destination="@id/drawingActivity" />
+                app:destination="@id/drawingActivity"
+                app:launchSingleTop="true" />
         <argument
                 android:name="playerName"
                 app:argType="string" />
@@ -34,6 +35,7 @@
         <action
                 android:id="@+id/action_createRoomFragment_to_drawingActivity"
                 app:destination="@id/drawingActivity"
+                app:launchSingleTop="true"
                 app:popUpTo="@id/createRoomFragment" />
         <argument
                 android:name="playerName"
