Setup final back button pressed flow

--- a/app/src/main/res/navigation/setup_nav_graph.xml
+++ b/app/src/main/res/navigation/setup_nav_graph.xml
@@ -23,7 +23,7 @@
         <action
                 android:id="@+id/action_selectRoomFragment_to_drawingActivity"
                 app:destination="@id/drawingActivity"
-                app:launchSingleTop="true" />
+                app:popUpTo="@id/selectRoomFragment" />
         <argument
                 android:name="playerName"
                 app:argType="string" />
@@ -35,7 +35,6 @@
         <action
                 android:id="@+id/action_createRoomFragment_to_drawingActivity"
                 app:destination="@id/drawingActivity"
-                app:launchSingleTop="true"
                 app:popUpTo="@id/createRoomFragment" />
         <argument
                 android:name="playerName"
