--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -156,19 +156,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_word_to_guess_or_status_message">
 
-<!--            app:layout_constraintTop_toBottomOf="@+id/tv_word_to_guess_or_status_message"-->
-
-<!--            <ImageButton-->
-<!--                android:id="@+id/ib_players_drawer_open"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:scaleX="1.5"-->
-<!--                android:scaleY="1.5"-->
-<!--                android:layout_marginStart="4dp"-->
-<!--                app:srcCompat="@android:drawable/ic_menu"-->
-<!--                android:tint="@color/black"-->
-<!--                android:background="@android:color/transparent" />-->
-
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -237,19 +224,21 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="gone">
+                tools:visibility="visible">
 
-            <ImageView
-                    android:id="@+id/ivHappyMonkey"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+            <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/ivPickWordAnimation"
+                    android:layout_width="300dp"
+                    android:layout_height="197dp"
+                    android:layout_marginTop="16dp"
+                    android:contentDescription="Pick Word"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_happy_monkey"
-                    android:contentDescription="Happy monkey" />
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_cacheComposition="true"
+                    app:lottie_rawRes="@raw/pick_word" />
 
             <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvChooseWord"
@@ -257,11 +246,24 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/pick_your_word"
-                    android:textSize="35sp"
+                    android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ivHappyMonkey" />
+                    app:layout_constraintTop_toBottomOf="@+id/ivPickWordAnimation" />
+
+            <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnThirdWord"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.502"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnSecondWord"
+                    app:layout_constraintVertical_bias="0.3"
+                    tools:text="Third Word" />
 
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnFirstWord"
@@ -270,9 +272,10 @@
                     android:layout_marginBottom="30dp"
                     app:layout_constraintBottom_toTopOf="@+id/btnSecondWord"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.68"
                     app:layout_constraintVertical_chainStyle="packed"
                     tools:text="First Word" />
 
@@ -283,24 +286,11 @@
                     android:layout_marginBottom="30dp"
                     app:layout_constraintBottom_toTopOf="@+id/btnThirdWord"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnFirstWord"
                     app:layout_constraintVertical_bias="0.3"
                     tools:text="Second Word" />
-
-            <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnThirdWord"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="30dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnSecondWord"
-                    app:layout_constraintVertical_bias="0.3"
-                    tools:text="Third Word" />
 
             <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_pick_word_time_remaining"
