--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -11,9 +11,11 @@
             android:layout_height="255dp"
             app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.219"
+            app:layout_constraintVertical_bias="0.108"
+            app:lottie_cacheComposition="true"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/create_room" />
@@ -23,12 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/create_a_new_room"
-            android:textSize="40sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ivDoodleWorld" />
+            app:layout_constraintTop_toTopOf="@+id/ivDoodleWorld"
+            app:layout_constraintVertical_bias="0.957" />
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilRoomName"
