--- a/app/src/main/res/navigation/setup_nav_graph.xml
+++ b/app/src/main/res/navigation/setup_nav_graph.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/setup_nav_graph"
         app:startDestination="@id/usernameFragment">
 
     <fragment
             android:id="@+id/usernameFragment"
             android:name="com.realityexpander.guessasketch.ui.setup.select_username.UsernameFragment"
-            android:label="UsernameFragment" >
+            android:label="UsernameFragment"
+            tools:layout="@layout/fragment_player_name"
+            >
         <action
                 android:id="@+id/action_usernameFragment_to_selectRoomFragment"
                 app:destination="@id/selectRoomFragment" />
@@ -15,7 +18,9 @@
     <fragment
             android:id="@+id/selectRoomFragment"
             android:name="com.realityexpander.guessasketch.ui.setup.select_room.SelectRoomFragment"
-            android:label="SelectRoomFragment" >
+            android:label="SelectRoomFragment"
+            tools:layout="@layout/fragment_select_room"
+            >
         <action
                 android:id="@+id/action_selectRoomFragment_to_createRoomFragment"
                 app:destination="@id/createRoomFragment"
@@ -31,7 +36,9 @@
     <fragment
             android:id="@+id/createRoomFragment"
             android:name="com.realityexpander.guessasketch.ui.setup.create_room.CreateRoomFragment"
-            android:label="CreateRoomFragment" >
+            android:label="CreateRoomFragment"
+            tools:layout="@layout/fragment_create_room"
+            >
         <action
                 android:id="@+id/action_createRoomFragment_to_drawingActivity"
                 app:destination="@id/drawingActivity"
@@ -43,7 +50,9 @@
     <activity
             android:id="@+id/drawingActivity"
             android:name="com.realityexpander.guessasketch.ui.drawing.DrawingActivity"
-            android:label="DrawingActivity" >
+            android:label="DrawingActivity"
+            tools:layout="@layout/activity_drawing"
+            >
         <argument
                 android:name="playerName"
                 app:argType="string" />
