--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -224,7 +224,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible">
+                tools:visibility="invisible">
 
             <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/ivPickWordAnimation"
@@ -236,8 +236,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
                     app:lottie_cacheComposition="true"
+                    app:lottie_loop="true"
                     app:lottie_rawRes="@raw/pick_word" />
 
             <com.google.android.material.textview.MaterialTextView
